# pokemon_shakespeare

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
pokemon_shakespeare/: caching.py  exceptions.py  main.py  persistence.py  service.py  settings.py
tests/: resources.py  test_caching.py  test_pokemon_shakespeare.py  test_service.py
